Update Dockerfile with libspatialindex

--- a/examples/Dockerfile
+++ b/examples/Dockerfile
@@ -1,6 +1,9 @@
 FROM andrewosh/binder-base
 MAINTAINER Jeff Terstriep <jefft@illinois.edu>
 
+USER root
+RUN wget http://download.osgeo.org/libspatialindex/spatialindex-src-1.8.5.tar.gz
+RUN tar xzf spatialindex-src-1.8.5.tar.gz; cd spatialindex-src-1.8.5; ./configure; make; make install; cd ..
 
 USER main
 RUN pip install osmnx
