--- a/examples/Dockerfile
+++ b/examples/Dockerfile
@@ -3,7 +3,9 @@ MAINTAINER Jeff Terstriep <jefft@illinois.edu>
 
 USER root
 RUN wget http://download.osgeo.org/libspatialindex/spatialindex-src-1.8.5.tar.gz
-RUN tar xzf spatialindex-src-1.8.5.tar.gz; cd spatialindex-src-1.8.5; ./configure; make; make install; cd ..
+RUN tar xzf spatialindex-src-1.8.5.tar.gz && \
+    cd spatialindex-src-1.8.5 && \
+    ./configure && make && make install
 
 USER main
 RUN pip install osmnx
